# cortex

./: .clinerules  .gitignore
celery-unraid/: Dockerfile  docker-compose.yml  requirements.txt
celery-unraid/app/: celery_app.py  tasks.py
dats/: .gitignore  README.md  pyproject.toml  requirements.txt
dats/docs/: ARCHITECTURE_KNOWLEDGE_GRAPH.md  telemetry-plan.md
dats/docs/architecture/: MICROSERVICES_DESIGN.md  servers.yaml
dats/docs/architecture/decisions/: 001-repo-strategy.md
dats/docs/architecture/prompts/agents/: complexity_estimator.md
dats/docs/architecture/services/: 01-model-gateway.md  02-rag-service.md  03-cascade-service.md  04-qa-service.md  05-agent-service.md  06-worker-service.md  07-orchestration-service.md
dats/docs/prompts/agents/: qa_reviewer.md
dats/docs/prompts/schemas/: task_schema.yaml
dats/docs/prompts/workers/: code_vision.md
dats/docs/testing/: 02-integration-tests.md  04-additional-programs.md
dats/grafana/dashboards/: dats-observability.json
dats/scripts/: test_anthropic.py  test_components.py  test_fibonacci_pipeline.py  test_real_pipeline.py  test_server_connectivity.py
dats/src/agents/: base.py  complexity_estimator.py  coordinator.py  merge_coordinator.py  qa_reviewer.py
dats/src/api/: app.py  dependencies.py
dats/src/api/routes/: provenance.py
dats/src/cascade/: detector.py  revalidation.py
dats/src/cli/commands/: __init__.py  config.py  monitoring.py  project.py  status.py
dats/src/config/: __init__.py  routing.py  settings.py
dats/src/merge/: __init__.py  classifier.py  config.py  detector.py  strategies.py
dats/src/merge/resolvers/: architectural.py  base.py
dats/src/models/: anthropic_client.py  ollama_client.py  openai_client.py
dats/src/pipeline/: __init__.py  orchestrator.py
dats/src/prompts/: __init__.py  loader.py  renderer.py
dats/src/qa/: __init__.py  human_review.py  profiles.py  results.py
dats/src/qa/validators/: __init__.py  testing.py
dats/src/queue/: celery_app.py  tasks.py
dats/src/rag/: __init__.py  client.py  embedding_trigger.py  query.py
dats/src/storage/: __init__.py  provenance.py
dats/src/telemetry/: __init__.py  decorators.py
dats/src/workers/: base.py  documentation.py  ui_design.py
dats/tests/: test_functional.py  test_pipeline.py
dats/tests/test_merge/: test_coordinator.py  test_detector.py
docs/architecture/: INDEX.md  MICROSERVICES_DESIGN.md  SERVICE_DONE_DEFINITION.md
legacy/: README.md
legacy/dats/: .gitignore  README.md  requirements.txt
prompts/: README.md
services/model-gateway/: .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
services/model-gateway/config/: model-gateway.yaml
services/model-gateway/contracts/: openapi.yaml
services/model-gateway/src/: __init__.py  config.py  main.py
services/model-gateway/src/providers/: __init__.py  anthropic.py  base.py  ollama.py  vllm.py
services/model-gateway/src/routers/: __init__.py  generate.py  health.py  models.py
services/model-gateway/src/services/: __init__.py  failover.py  model_registry.py
services/model-gateway/tests/: __init__.py  conftest.py
services/model-gateway/tests/contract/: __init__.py  test_openapi.py
services/model-gateway/tests/integration/: __init__.py  test_endpoints.py
services/model-gateway/tests/unit/: __init__.py  test_failover.py  test_providers.py
(+88 files in other folders)
